# light-shot

./: AboutWindow.qml  CMakeLists.txt  CaptureWindow.qml  IrregularWindow.qml  MainActions.qml  MainButtons.qml  MainDialog.qml  MainWindow.qml  PinWindow.qml  README.md  SelectAreaButtons.qml  SelectionActions.qml  SelectionRect.qml  Windowcursor.qml  Windowundercursor_.qml  globalvalues.cpp  globalvalues.h  imagesaver.cpp  imagesaver.h  irregularshot.cpp  irregularshot.h  lightshot.js  main.cpp  rectscreenshot.js  resources.qrc  screenshotmanager.cpp  screenshotmanager.h  screenshotprovider.h  undercursormannager.cpp  undercursormannager.h  windowrect.cpp  windowrect.h  windowundercursor.cpp  windowundercursor.h  开发报告.doc
light-shot/: CMakeLists.txt  CaptureWindow.qml  CrsDragRect.qml  IrregularWindow.qml  MainButtons.qml  MainWindow.qml  SelectionRect.qml  globalvalues.h  imagesaver.cpp  imagesaver.h  irregularshot.cpp  irregularshot.h  lightshot.js  main.cpp  screenshotprovider.cpp  screenshotprovider.h  windowundercursor.cpp  windowundercursor.h
